MIME-Types (#9)
* feat(Env & Random)

* Updated .idea/inspectionProfiles/

* Updated .idea/codeStyles/

* Update Env.java

* feat(Package Refactor & HttpBuilder)

* Delete src/main/java/de/trinext/util/Env.java

* feat(HttpMethod)

* fix(HttpMethod)

* fix(Address Comments in #7)

* fix(imports)

* feat(Mime Types)

* fix(gitignore)

---------

Co-authored-by: TriNextTony <ext.jenkins@trinext.de>
Co-authored-by: MattisKunstmann <mattis.kunstmann@trinext.de>